#
# PCI MMIO tool
#
# Copyright (C) 2017-2018 NEC Corporation
# This file is part of the PCI MMIO tool.
#
# The PCI MMIO tool is free software; you can redistribute it
# and/or modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either version
# 2.1 of the License, or (at your option) any later version.
#
# The PCI MMIO tool is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with the PCI MMIO tool; if not, see
# <http://www.gnu.org/licenses/>.
#

lib_LTLIBRARIES = libpcim.la
libpcim_la_SOURCES = libpcim.c pcim.h
libpcim_la_CFLAGS = -O2
libpcim_la_LDFLAGS = -version-info 1:0:0
include_HEADERS = pcim.h
